// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> unit test should highlight input icon on focus 1`] = `
<svg
  className="normal"
  height="22"
  width="22"
>
  checklist.svg
</svg>
`;

exports[`<App /> unit test should highlight input icon on focus 2`] = `
<svg
  className="focused"
  height="22"
  width="22"
>
  checklist.svg
</svg>
`;

exports[`<App /> unit test should highlight input icon on focus 3`] = `
<svg
  className="normal"
  height="22"
  width="22"
>
  checklist.svg
</svg>
`;
